[package]
name = "wiwu_core"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
failure = "0.1.3"
futures = "*"
http = "*"
listenfd = "0.3"
serde = "*"
serde_derive = "1"
