[package]
name = "wiwu_core"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.6"
futures = "*"
http = "*"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4"
native-tls = "0.2.7"
serde = "*"
serde_derive = "1"
